# Ecosystem

./: .gitignore  CMakeLists.txt  Ecosystem.sln  Ecosystem.vcxproj  Ecosystem.vcxproj.filters
include/: Automaton.h  Cell.h  Controller.cpp  Controller.h  EditableTreeView.h  UI.h  Utils.h  Visualization.h
include/config/: CellConfig.h  ControllerConfig.h  KeyBindConfig.h  UIConfig.h  VisModeConfig.h  VisualizationConfig.h
src/: Automaton.cpp  Cell.cpp  Controller.cpp  EditableTreeview.cpp  UI.cpp  Utils.cpp  Visualization.cpp  main.cpp
